--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,10 @@
 body{
 	margin: 0;
 	padding: 0;
+	
+}
+
+.login-body{
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -25,7 +29,7 @@ body{
 	width:100%;
 	height: 100%;
 }
-label{
+.login-label {
 	color: #fff;
 	font-size: 2.3em;
 	justify-content: center;
@@ -35,7 +39,7 @@ label{
 	cursor: pointer;
 	transition: .5s ease-in-out;
 }
-input{
+.login-input{
 	width: 60%;
 	height: 20px;
 	background: #e0dede;
@@ -47,7 +51,7 @@ input{
 	outline: none;
 	border-radius: 5px;
 }
-button{
+.login-button{
 	width: 60%;
 	height: 40px;
 	margin: 10px auto;
@@ -64,7 +68,7 @@ button{
 	transition: .2s ease-in;
 	cursor: pointer;
 }
-button:hover{
+.login-button:hover{
 	background: #6d44b8;
 }
 .login{
@@ -88,3 +92,13 @@ button:hover{
 #chk:checked ~ .signup label{
 	transform: scale(.6);
 }
+
+/* dashboard */
+.dashboard-body{
+	font-family: 'Jost', sans-serif;
+	background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e);
+	min-height: 100vh;
+}
+
+/* product list */
+
