--- a/views/Login.hbs
+++ b/views/Login.hbs
@@ -1,22 +1,27 @@
+<div class="login-body">
+
+
 <div class="main1">  	
-		<input type="checkbox" id="chk" aria-hidden="true">
+		<input class="login-input" type="checkbox" id="chk" aria-hidden="true">
 
 			<div class="signup">
 				<form>
-					<label for="chk" aria-hidden="true">Sign up</label>
-					<input type="text" name="txt" placeholder="User name" required="">
-					<input type="email" name="email" placeholder="Email" required="">
-					<input type="password" name="pswd" placeholder="Password" required="">
-					<button>Sign up</button>
+					<label class="login-label" for="chk" aria-hidden="true">Sign up</label>
+					<input class="login-input" type="text" name="txt" placeholder="User name" required="">
+					<input class="login-input" type="email" name="email" placeholder="Email" required="">
+					<input class="login-input" type="password" name="pswd" placeholder="Password" required="">
+					<button class="login-button"> Sign up</button>
 				</form>
 			</div>
 
 			<div class="login">
 				<form>
-					<label for="chk" aria-hidden="true">Login</label>
-					<input type="email" name="email" placeholder="Email" required="">
-					<input type="password" name="pswd" placeholder="Password" required="">
-					<button>Login</button>
+					<label  class="login-label" for="chk" aria-hidden="true">Login</label>
+					<input class="login-input" type="email" name="email" placeholder="Email" required="">
+					<input class="login-input" type="password" name="pswd" placeholder="Password" required="">
+					<button class="login-button">Login</button>
 				</form>
 			</div>
+	</div>
+
 	</div>
