--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -13077,7 +13077,7 @@ code {
     .table td img {
       width: 36px;
       height: 36px;
-      border-radius: 100%; }
+       }
     .table th .badge,
     .table td .badge {
       margin-bottom: 0; }
