--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -101,4 +101,10 @@ body{
 }
 
 /* product list */
-
+/* 
+.alert-box1{
+	position: absolute;
+    margin-left: 65%;
+    margin-top: 0px;
+    top: 5rem;
+} */
