--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -11,12 +11,9 @@
 
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="/">Home</a>
                         </li>
-                        <li class="nav-item me-5">
-                            <a class="nav-link" href="#">Link</a>
-                        </li>
-
+                        
 
                     </ul>
                     <form class="d-flex">
