--- a/views/user/dashboard.hbs
+++ b/views/user/dashboard.hbs
@@ -6,11 +6,13 @@
 {{#each products as |product|}}
             <div class="col-xl-3 col-lg-4 col-md-4  col-12">
                 <div class="card mt-5 border-info" style="width: 18rem;">
-                    <img class="card-img-top img=fluid" src="{{this.image}}" alt="Card image cap">
+                     <img class="card-img-top img-fluid" src="{{this.image}}" alt="Card image cap">
                     <div class="card-body ">
                         <h5 class="card-title">{{this.name}}</h5>
-                        <p class="card-text">{{this.description}}</p>
-                        <a href="#" class="btn btn-success">Buy Now</a>
+                        Description:<p class="card-text">{{this.description}}</p>
+                         Price:<h3 class="card-text">{{this.price}}</h3>
+                    
+                        <a href="checkout" class="btn btn-success">Buy Now</a>
                     </div>
                 </div>
             </div>
