--- a/views/admin/add-products.hbs
+++ b/views/admin/add-products.hbs
@@ -12,49 +12,48 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="pages/icons/mdi.html">
+                <a class="nav-link" href="/admin/add-product">
                     <span class="icon-bg"><i class="mdi mdi-contacts menu-icon"></i></span>
                     <span class="menu-title">Add Product</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="pages/forms/basic_elements.html">
+                <a class="nav-link" href="/admin/edit-product">
                     <span class="icon-bg"><i class="mdi mdi-format-list-bulleted menu-icon"></i></span>
                     <span class="menu-title">Edit Product</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="pages/charts/chartjs.html">
+                <a class="nav-link" href="/admin/order-details">
                     <span class="icon-bg"><i class="mdi mdi-chart-bar menu-icon"></i></span>
-                    <span class="menu-title">Charts</span>
+                    <span class="menu-title">Order Details</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="pages/tables/basic-table.html">
+                <a class="nav-link" href="/admin-userinfo">
                     <span class="icon-bg"><i class="mdi mdi-table-large menu-icon"></i></span>
-                    <span class="menu-title">Tables</span>
+                    <span class="menu-title">User Info</span>
                 </a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" data-bs-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
-                    <span class="icon-bg"><i class="mdi mdi-lock menu-icon"></i></span>
-                    <span class="menu-title">User Pages</span>
-                    <i class="menu-arrow"></i>
-                </a>
-                <div class="collapse" id="auth">
-                    <ul class="nav flex-column sub-menu">
-                        <li class="nav-item"> <a class="nav-link" href="pages/samples/blank-page.html"> Blank Page </a>
-                        </li>
-                        <li class="nav-item"> <a class="nav-link" href="pages/samples/login.html"> Login </a></li>
-                        <li class="nav-item"> <a class="nav-link" href="pages/samples/register.html"> Register </a></li>
-                        <li class="nav-item"> <a class="nav-link" href="pages/samples/error-404.html"> 404 </a></li>
-                        <li class="nav-item"> <a class="nav-link" href="pages/samples/error-500.html"> 500 </a></li>
-                    </ul>
-                </div>
-            </li>
+            {{!-- <li class="nav-item">
+        <a class="nav-link" data-bs-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
+          <span class="icon-bg"><i class="mdi mdi-lock menu-icon"></i></span>
+          <span class="menu-title">User Pages</span>
+          <i class="menu-arrow"></i>
+        </a>
+        <div class="collapse" id="auth">
+          <ul class="nav flex-column sub-menu">
+            <li class="nav-item"> <a class="nav-link" href="pages/samples/blank-page.html"> Blank Page </a></li>
+            <li class="nav-item"> <a class="nav-link" href="pages/samples/login.html"> Login </a></li>
+            <li class="nav-item"> <a class="nav-link" href="pages/samples/register.html"> Register </a></li>
+            <li class="nav-item"> <a class="nav-link" href="pages/samples/error-404.html"> 404 </a></li>
+            <li class="nav-item"> <a class="nav-link" href="pages/samples/error-500.html"> 500 </a></li>
+          </ul>
+        </div>
+      </li> --}}
 
 
-            <li class="nav-item sidebar-user-actions">
+            <li class="nav-item sidebar-user-actions mt-5">
                 <div class="sidebar-user-menu">
                     <a href="#" class="nav-link"><i class="mdi mdi-logout menu-icon"></i>
                         <span class="menu-title">Log Out</span></a>
@@ -66,6 +65,20 @@
 
     <!-- partial -->
     <div class="main-panel ">
+
+        {{!-- <div class="text-center  alert alert-dismissible alert-success"
+            style="position: absolute; margin-left: 55%; top: 5rem;">
+            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+            <strong> </strong> User Registration Successfull.
+        </div> --}}
+        {{#if message}}
+        <div class="text-center alert alert-dismissible alert-{{message.type}}"
+            style="position: absolute; margin-left: 55%; top: 5rem;">
+            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+            <strong></strong> {{message.text}}
+        </div>
+        {{/if}}
+
         <div class="content-wrapper">
             <div class="d-xl-flex justify-content-between align-items-start">
                 <h2 class="text-dark font-weight-bold mb-2"> Add Product </h2>
@@ -77,27 +90,28 @@
 
                 {{!-- admin pannels --}}
 
-                <form>
+                <form method="post" action="/admin/add-product" enctype="multipart/form-data">
                     <div class="form-group mt-2">
                         <label>Product Name</label>
-                        <input type="text" class="form-control" id="" placeholder="Add Product Name">
+                        <input type="text" class="form-control" name="pname" id="" placeholder="Add Product Name">
                     </div>
                     <div class="form-group ">
                         <label>Product Description</label>
-                        <input type="text" class="form-control" id="" placeholder="Add Product Description">
+                        <input type="text" class="form-control" name="pdescription" id=""
+                            placeholder="Add Product Description">
                     </div>
                     <div class="form-group">
                         <label>Product Price</label>
-                        <input type="text" class="form-control" id="" placeholder="Add Product Price">
+                        <input type="text" class="form-control" name="pprice" id="" placeholder="Add Product Price">
                     </div>
-                     <div class="form-group">
+                    <div class="form-group">
                         <label>Product Quantity</label>
-                        <input type="text" class="form-control" id="" placeholder="Add Quantity">
+                        <input type="text" class="form-control" name="pquantity" id="" placeholder="Add Quantity">
                     </div>
                     <div class="form-group">
                         <label>Product file input</label>
                         <br>
-                        <input type="file" class="form-control-file" id="">
+                        <input type="file" class="form-control-file" name="pimage" id="">
                     </div>
 
                     <button type="submit" class="btn btn-success">Add Product</button>
