--- a/views/admin/admindash.hbs
+++ b/views/admin/admindash.hbs
@@ -20,19 +20,19 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="pages/forms/basic_elements.html">
+        <a class="nav-link" href="/admin/edit-product">
           <span class="icon-bg"><i class="mdi mdi-format-list-bulleted menu-icon"></i></span>
           <span class="menu-title">Edit Product</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="pages/charts/chartjs.html">
+        <a class="nav-link" href="/admin/order-details">
           <span class="icon-bg"><i class="mdi mdi-chart-bar menu-icon"></i></span>
           <span class="menu-title">Order Details</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="pages/tables/basic-table.html">
+        <a class="nav-link" href="/admin-userinfo">
           <span class="icon-bg"><i class="mdi mdi-table-large menu-icon"></i></span>
           <span class="menu-title">User Info</span>
         </a>
@@ -93,10 +93,10 @@
     {{#each products as |product|}}
     <tr>
       <th scope="row">1</th>
-      <td>{{this.name}}</td>
-      <td>{{this.description}}</td>
-      <td>{{this.price}}</td>
-      <td> <img src="{{this.image}}" style="width: 50px; height: 50px;" > </td>
+      <td>{{this.pname}}</td>
+      <td>{{this.pdescription}}</td>
+      <td>{{this.pprice}}</td>
+      <td> <img src="/images/{{this.pimage}}" style="width: 50px; height: 50px;" > </td>
       <td>
       <button class="btn btn-info">Edit</button>
       <button class="btn btn-danger">Delete</button>
