--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -1,29 +1,47 @@
+<nav class=" navbar navbar-expand-lg navbar-light bg-light ">
+    <div class="container">
+        <a class="navbar-brand" href="#">Medical Shop Cart</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-        <nav class=" navbar navbar-expand-lg navbar-light bg-light ">
-            <div class="container">
-                <a class="navbar-brand" href="#">Medical Shop Cart</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/">Home</a>
+                </li>
 
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/">Home</a>
-                        </li>
+
+            </ul>
+
+
+            <div class="d-flex">
+                <div class="dropdown1">
+                    
+                    <button class="dropbtn1 btn btn-info" >
+                        {{#if user}}
+                        {{user.uname}}
+                        {{else}}
+                        Account
+                        {{/if}}
+                        </button>
+                    <div class="dropdown-content1">
+                        {{#if user}}
+                        <a href="/Logout">Logout</a>
+                        {{else}}
+                        <a  href="/Login"> Login </a>
                         
-
-                    </ul>
-                    <form class="d-flex">
-                        <a class="btn btn-outline-success" href="/Login"> Login </a>
-
-                    </form>
-
+                        {{/if}}
+                        
+                    </div>
                 </div>
+
+                
+
+
             </div>
-        </nav>
 
-
-
+        </div>
+    </div>
+</nav>
