--- a/views/admin/user-info.hbs
+++ b/views/admin/user-info.hbs
@@ -68,17 +68,11 @@
   <!-- partial -->
   <div class="main-panel">
 
-     {{#if message}}
-        <div class="text-center alert alert-dismissible alert-{{message.type}}"
-            style="position: absolute; margin-left: 55%; top: 5rem;">
-            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-            <strong></strong> {{message.text}}
-        </div>
-        {{/if}}
+
 
     <div class="content-wrapper">
       <div class="d-xl-flex justify-content-between align-items-start">
-        <h2 class="text-dark font-weight-bold mb-2"> Overview dashboard </h2>
+        <h2 class="text-dark font-weight-bold mb-2"> User dashboard </h2>
         <div class="d-sm-flex justify-content-xl-between align-items-center mb-2">
        {{!-- <a href="" class="btn btn-success"> Add Product</a> --}}
         </div>
@@ -91,28 +85,26 @@
   <thead class="thead-light">
     <tr>
       <th scope="col"></th>
-      <th scope="col">Title</th>
-      <th scope="col">Description</th>
-      <th scope="col">Price</th>
+      <th scope="col">User Name</th>
+      <th scope="col">Email</th>
+      {{!-- <th scope="col">Price</th>
       <th scope="col">Image</th>
-      <th scope="col"></th>
+      <th scope="col"></th> --}}
     </tr>
   </thead>
   <tbody>
-    {{#each products as |product|}}
+
+   {{#each user as |user|}}
+
     <tr>
-      {{!-- <th scope="row">{{this.pid}}</th> --}}
+
       <th scope="row">◾</th>
-      <td>{{this.pname}}</td>
-      <td>{{this.pdescription}}</td>
-      <td>{{this.pprice}}</td>
-      <td> <img src="/images/{{this.pimage}}" style="width: 50px; height: 50px;" > </td>
-      <td>
-      <a href="/admin/edit-product/{{this.pid}}" class="btn btn-info">Edit</a>
-      <a href="/admin/delete-product/{{this.pid}}" class="btn btn-danger" onclick="return confirm('Do you want to delete {{this.pname}} ?')">Delete</a>
-      </td>
+      <td>{{this.uname}}</td>
+      <td>{{this.email}}</td>
+      <td></td>
+      
     </tr>
-    {{/each}}
+{{/each}}
   </tbody>
 </table>
 
