--- a/views/partials/admin-header.hbs
+++ b/views/partials/admin-header.hbs
@@ -46,7 +46,7 @@
            <img src="https://img.icons8.com/material/50/000000/user-male-circle--v1.png"/>
           </div>
           <div class="nav-profile-text">
-            <p class="mb-1 text-black">User Name</p>
+            <p class="mb-1 text-black">Admin</p>
           </div>
         </a>
 
