--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,10 @@
-body{
+body {
 	margin: 0;
 	padding: 0;
-	
+
 }
 
-.login-body{
+.login-body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -12,7 +12,8 @@ body{
 	font-family: 'Jost', sans-serif;
 	background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e);
 }
-.main1{
+
+.main1 {
 	width: 350px;
 	height: 500px;
 	background: red;
@@ -21,14 +22,17 @@ body{
 	border-radius: 10px;
 	box-shadow: 5px 20px 50px #000;
 }
-#chk{
+
+#chk {
 	display: none;
 }
-.signup{
+
+.signup {
 	position: relative;
-	width:100%;
+	width: 100%;
 	height: 100%;
 }
+
 .login-label {
 	color: #fff;
 	font-size: 2.3em;
@@ -39,7 +43,8 @@ body{
 	cursor: pointer;
 	transition: .5s ease-in-out;
 }
-.login-input{
+
+.login-input {
 	width: 60%;
 	height: 20px;
 	background: #e0dede;
@@ -51,7 +56,8 @@ body{
 	outline: none;
 	border-radius: 5px;
 }
-.login-button{
+
+.login-button {
 	width: 60%;
 	height: 40px;
 	margin: 10px auto;
@@ -68,33 +74,38 @@ body{
 	transition: .2s ease-in;
 	cursor: pointer;
 }
-.login-button:hover{
+
+.login-button:hover {
 	background: #6d44b8;
 }
-.login{
+
+.login {
 	height: 460px;
 	background: #eee;
 	border-radius: 60% / 10%;
 	transform: translateY(-180px);
 	transition: .8s ease-in-out;
 }
-.login label{
+
+.login label {
 	color: #573b8a;
 	transform: scale(.6);
 }
 
-#chk:checked ~ .login{
+#chk:checked~.login {
 	transform: translateY(-500px);
 }
-#chk:checked ~ .login label{
-	transform: scale(1);	
+
+#chk:checked~.login label {
+	transform: scale(1);
 }
-#chk:checked ~ .signup label{
+
+#chk:checked~.signup label {
 	transform: scale(.6);
 }
 
 /* dashboard */
-.dashboard-body{
+.dashboard-body {
 	font-family: 'Jost', sans-serif;
 	background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e);
 	min-height: 100vh;
@@ -118,35 +129,236 @@ body{
 	font-size: 16px;
 	border: none;
 	cursor: pointer;
-  }
-  
-  .dropdown1 {
+}
+
+.dropdown1 {
 	position: relative;
 	display: inline-block;
-  }
-  
-  .dropdown-content1 {
+}
+
+.dropdown-content1 {
 	display: none;
 	position: absolute;
 	background-color: #f9f9f9;
 	min-width: 160px;
-	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 	z-index: 1;
-  }
-  
-  .dropdown-content1 a {
+}
+
+.dropdown-content1 a {
 	color: black;
 	padding: 12px 16px;
 	text-decoration: none;
 	display: block;
-  }
-  
-  .dropdown-content1 a:hover {background-color: #f1f1f1}
-  
-  .dropdown1:hover .dropdown-content1 {
+}
+
+.dropdown-content1 a:hover {
+	background-color: #f1f1f1
+}
+
+.dropdown1:hover .dropdown-content1 {
 	display: block;
-  }
-  
-  .dropdown1:hover .dropbtn1 {
+}
+
+.dropdown1:hover .dropbtn1 {
 	background-color: #3e8e41;
-  }
+}
+
+/*add to cart*/
+.cart-body {
+	margin: 0;
+	padding: 0;
+	background: linear-gradient(to bottom right, #E3F0FF, #FAFCFF);
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.Cart-Container {
+	width: 70%;
+	height: 85%;
+	background-color: #ffffff;
+	border-radius: 20px;
+	box-shadow: 0px 25px 40px #1687d933;
+}
+
+.Header {
+	margin: auto;
+	width: 90%;
+	height: 15%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.Heading {
+	font-size: 20px;
+	font-family: 'Open Sans';
+	font-weight: 700;
+	color: #2F3841;
+}
+
+.Action {
+	font-size: 14px;
+	font-family: 'Open Sans';
+	font-weight: 600;
+	color: #E44C4C;
+	cursor: pointer;
+	border-bottom: 1px solid #E44C4C;
+}
+
+.Cart-Items {
+	margin: auto;
+	width: 90%;
+	height: 30%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.image-box {
+	width: 15%;
+	text-align: center;
+}
+
+.about {
+	height: 100%;
+	padding: 2rem;
+}
+
+.title {
+	padding-top: 5px;
+	line-height: 10px;
+	font-size: 32px;
+	font-family: 'Open Sans';
+	font-weight: 800;
+	color: #202020;
+}
+
+.subtitle {
+	line-height: 10px;
+	font-size: 18px;
+	font-family: 'Open Sans';
+	font-weight: 600;
+	color: #909090;
+}
+
+.counter {
+	width: 15%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.btn-cart {
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+	background-color: #d9d9d9;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 20px;
+	font-family: 'Open Sans';
+	font-weight: 900;
+	color: #202020;
+	cursor: pointer;
+}
+
+.count {
+	font-size: 20px;
+	font-family: 'Open Sans';
+	font-weight: 900;
+	color: #202020;
+}
+
+.prices {
+	height: 100%;
+	text-align: right;
+}
+
+.amount {
+	padding-top: 20px;
+	font-size: 26px;
+	font-family: 'Open Sans';
+	font-weight: 800;
+	color: #202020;
+}
+
+.save {
+	padding-top: 5px;
+	font-size: 14px;
+	font-family: 'Open Sans';
+	font-weight: 600;
+	color: #1687d9;
+	cursor: pointer;
+}
+
+.remove {
+	padding-top: 5px;
+	font-size: 14px;
+	font-family: 'Open Sans';
+	font-weight: 600;
+	color: #E44C4C;
+	cursor: pointer;
+}
+
+hr {
+	width: 66%;
+	float: right;
+	margin-right: 5%;
+}
+
+.checkout {
+	/* float: right;
+	margin-right: 5%;
+	width: 28%; */
+	float: right;
+    width: 18%;
+    position: absolute;
+    margin-left: 46rem;
+    bottom: 1rem;
+}
+
+.total {
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+}
+
+.Subtotal {
+	font-size: 22px;
+	font-family: 'Open Sans';
+	font-weight: 700;
+	color: #202020;
+}
+
+.items {
+	font-size: 16px;
+	font-family: 'Open Sans';
+	font-weight: 500;
+	color: #909090;
+	line-height: 10px;
+}
+
+.total-amount {
+	font-size: 36px;
+	font-family: 'Open Sans';
+	font-weight: 900;
+	color: #202020;
+}
+
+.button {
+	margin-top: 5px;
+	width: 100%;
+	height: 40px;
+	border: none;
+	background: linear-gradient(to bottom right, #B8D7FF, #8EB7EB);
+	border-radius: 20px;
+	cursor: pointer;
+	font-size: 16px;
+	font-family: 'Open Sans';
+	font-weight: 600;
+	color: #202020;
+}
