--- a/views/admin/edit-product.hbs
+++ b/views/admin/edit-product.hbs
@@ -55,7 +55,7 @@
 
             <li class="nav-item sidebar-user-actions mt-5">
                 <div class="sidebar-user-menu">
-                    <a href="#" class="nav-link"><i class="mdi mdi-logout menu-icon"></i>
+                    <a href="/admin/adminlogout" class="nav-link"><i class="mdi mdi-logout menu-icon"></i>
                         <span class="menu-title">Log Out</span></a>
                 </div>
             </li>
